[PPD-206] CRUD GPS: updated swagger definition
